--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
           </form>
           <div class="text-center"><a class="btn search popup" href="#search-filter">Search options</a></div>
         </section>
-        <section class="slider-objects mt-128">
+        <section class="two-objects slider-objects mt-128">
           <div><a class="object-item" href="#">
               <div class="image-numbers">
                 <div class="image" style="background-image: url(img/object-item/1.jpg)">
