--- a/service-specialist.html
+++ b/service-specialist.html
@@ -369,11 +369,13 @@
       </div>
     </header>
     <main class="main-content">
-      <section class="top-block" style="background-image: url(img/service-page/top-block/2.jpg)">
-        <div class="container">
-          <div class="text">
-            <h1>Contact a specialist</h1>
-            <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><a class="btn" href="#">Contact</a>
+      <section class="wrap-top-block">
+        <div class="top-block" style="background-image: url(img/service-page/top-block/2.jpg)">
+          <div class="container">
+            <div class="text">
+              <h1>Contact a specialist</h1>
+              <p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Vestibulum ac diam sit amet quam vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><a class="btn" href="#">Contact</a>
+            </div>
           </div>
         </div>
       </section>
